tests/NormalTests/paczka1/fuzzy1/82450151.err
Error in line 4: quvTnCU S688 17,7
Error in line 9: ZJpTQ SZ88 8Z,0
Error in line 11: S868 S868 -3,4
Error in line 7: ZJpTQ A684 23,8
Error in line 18: JIECHuKMO A684 59,3
Error in line 8: quvTnCU S740 6,9
Error in line 35: Dv5QVGt S868 24,6
Error in line 36: Dv5QVGt S688 51,6
